<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".activity.RegisterAnnouncementActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/announceImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/padrao" />

        <ImageView
            android:id="@+id/announceImage1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/padrao" />

        <ImageView
            android:id="@+id/announceImage2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/padrao" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinnerRegions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:padding="10dp"
        android:background="@drawable/background_input_text"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/text_announce_title"
       />

    <com.blackcat.currencyedittext.CurrencyEditText
        android:id="@+id/editPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:padding="10dp"
        android:background="@drawable/background_input_text"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/text_announce_price"
        />

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginBottom="16dp"
        android:padding="10dp"
        android:background="@drawable/background_input_text"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/text_description"/>

    <com.santalu.maskara.widget.MaskEditText
        android:id="@+id/editContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:padding="10dp"
        android:background="@drawable/background_input_text"
        android:ems="10"
        android:hint="@string/text_announce_contact"
        android:inputType="number"
        app:mask="(__) ___ ___ ___"
        app:maskCharacter="_"
        app:maskStyle="completable"/>

    <Button
        android:id="@+id/buttonRegAnnounce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="registerAnnouncement"
        android:text="@string/text_register_announcement"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/colorPrimary"/>

</LinearLayout>